--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<link rel='stylesheet' type='text/css' href='style.css'>
 	</head>
 	<body>
-		<div class="calculator">
-			<div class="calculator-display">
+		<div class='calculator'>
+			<div class='calculator-display'>
 				<h1>0</h1>
 			</div>
-			<div class="calculator-buttons">
+			<div class='calculator-buttons'>
 				<button class='operator' value='+'>+</button>
 				<button class='operator' value='-'>-</button>
 				<button class='operator' value='*'>×</button>
